--- a/notebooks/wgan.ipynb
+++ b/notebooks/wgan.ipynb
@@ -21,13 +21,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.config.config import *\n",
     "from src.models.wgan import *\n",
     "from src.attributes import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/sondre/Documents/Project_DAT300/notebooks\n",
+      "/home/sondre/anaconda3/envs/fastai/lib/python37.zip\n",
+      "/home/sondre/anaconda3/envs/fastai/lib/python3.7\n",
+      "/home/sondre/anaconda3/envs/fastai/lib/python3.7/lib-dynload\n",
+      "\n",
+      "/home/sondre/anaconda3/envs/fastai/lib/python3.7/site-packages\n",
+      "/home/sondre/anaconda3/envs/fastai/lib/python3.7/site-packages/IPython/extensions\n",
+      "/home/sondre/.ipython\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "for p in sys.path:\n",
+    "    print (p)\n"
    ]
   },
   {
@@ -39,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,51 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>Model</th>\n",
-       "      <th>Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Id, Model, Date]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models"
    ]
