--- a/notebooks/wgan.ipynb
+++ b/notebooks/wgan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create dataloader \n",
-    "#### Look at training data"
+    "# WGAN:\n",
+    "\n",
+    "1. [Create dataloader](#1.)\n",
+    "    1.1 [Look at training data](#1.1)\n",
+    "    1.2 [Dataloader](#1.2)\n",
+    "    1.3 [Create generator and critic](#1.3)\n",
+    "2. [Work with saved models](#2.)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create dataloader <a name=\"1.\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Look at training data <a name=\"1.1\"></a>"
    ]
   },
   {
@@ -128,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Dataloader"
+    "#### Dataloader <a id=\"1.2\"></a>"
    ]
   },
   {
@@ -171,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create generator and critic"
+    "#### Create generator and critic <a id=\"1.3\"></a>"
    ]
   },
   {
@@ -188,13 +208,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Work with saved models\n",
+    "## Work with saved models <a id=\"2.\"></a>\n",
     "Want to make a new model? skip this part and start with Create Learner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -223,6 +243,7 @@
        "      <th>Img_size</th>\n",
        "      <th>Batch_size</th>\n",
        "      <th>Epochs</th>\n",
+       "      <th>Weight_decay</th>\n",
        "      <th>Num_gen</th>\n",
        "      <th>Date</th>\n",
        "      <th>Time</th>\n",
@@ -231,37 +252,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>43833e</td>\n",
-       "      <td>wgan</td>\n",
+       "      <td>ecc55e</td>\n",
+       "      <td>superresgan</td>\n",
        "      <td>128</td>\n",
-       "      <td>128</td>\n",
-       "      <td>30</td>\n",
+       "      <td>32</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.001</td>\n",
        "      <td>3000</td>\n",
-       "      <td>09/10/2019</td>\n",
-       "      <td>13:09:08</td>\n",
+       "      <td>12/10/2019</td>\n",
+       "      <td>13:14:20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Id Model  Img_size  Batch_size  Epochs  Num_gen        Date      Time\n",
-       "0  43833e  wgan       128         128      30     3000  09/10/2019  13:09:08"
+       "       Id        Model  Img_size  Batch_size  Epochs  Weight_decay  Num_gen  \\\n",
+       "0  ecc55e  superresgan       128          32      10         0.001     3000   \n",
+       "\n",
+       "         Date      Time  \n",
+       "0  12/10/2019  13:14:20  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "models = pd.read_csv(path_models + '/model_stats.csv')\n",
-    "models"
+    "model_stats = pd.read_csv(path_models + '/model_stats.csv')\n",
+    "model_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +337,7 @@
    "outputs": [],
    "source": [
     "learn = GANLearner.wgan(data, generator, critic, switch_eval=False,\n",
-    "                    opt_func = partial(optim.Adam, betas = (0., 0.99)), wd=0.)"
+    "                    opt_func = partial(optim.Adam, betas = (0., 0.99)), wd=weight_decay.)"
    ]
   },
   {
@@ -496,7 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(generator, path_models + '/generator/' + model_type + '/' + model_id + '.pth')\n",
+    "torch.save(generator.state_dict(), path_models + '/generator/' + model_type + '/' + model_id + '.pth')\n",
     "torch.save(critic.state_dict(), path_models + '/critic/' + model_type + '/' + model_id + '.pth')"
    ]
   },
@@ -548,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,11 +583,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_model_stats = pd.DataFrame({'Id': [model_id], 'Model': model_type, 'Img_size': img_size, 'Batch_size': batch_size, 'Epochs': epochs, 'Weight_decay': weight_decay, 'Num_gen': num_gen_mask, 'Date': date, 'Time' : time})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_stats = pd.DataFrame({'Id': [model_id], 'Model': model_type, 'Img_size': img_size, 'Batch_size': batch_size, 'Epochs': epochs, 'Num_gen': num_gen_mask, 'Date': date, 'Time' : time})"
+    "model_stats = add_model_stats(new_model_stats, model_stats, overwrite = True)"
    ]
   },
   {
@@ -571,15 +605,69 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "overwrite=False. Set overwrite to True if you want to delete old model\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Img_size</th>\n",
+       "      <th>Batch_size</th>\n",
+       "      <th>Epochs</th>\n",
+       "      <th>Weight_decay</th>\n",
+       "      <th>Num_gen</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>43833e</td>\n",
+       "      <td>wgan</td>\n",
+       "      <td>128</td>\n",
+       "      <td>128</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>12/10/2019</td>\n",
+       "      <td>13:18:34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Id Model  Img_size  Batch_size  Epochs  Weight_decay  Num_gen  \\\n",
+       "0  43833e  wgan       128         128      30           0.0     3000   \n",
+       "\n",
+       "         Date      Time  \n",
+       "0  12/10/2019  13:18:34  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "models = add_model_stats(model_stats, models)"
+    "model_stats"
    ]
   },
   {
