--- a/notebooks/superresgan.ipynb
+++ b/notebooks/superresgan.ipynb
@@ -2550,7 +2550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2560,7 +2560,9 @@
     "\n",
     "for i in range(len(gen_masks)):\n",
     "    path = path_gen_masks + '/' + gen_masks[i]\n",
-    "    gen_masks[i] = path\n"
+    "    gen_masks[i] = path\n",
+    "\n",
+    "gen_masks[:5]"
    ]
   },
   {
@@ -2577,7 +2579,7 @@
     }
    ],
    "source": [
-    "predict(gen_masks, path_gen_images, generator)"
+    "save_pred(gen_masks, generator, path_gen_images)"
    ]
   },
   {
@@ -2698,84 +2700,6 @@
     "df['Image'] = [f for f in sorted(os.listdir(path_gen_images)) if f.endswith('.jpg')]\n",
     "df['Mask'] = [f for f in sorted(os.listdir(path_gen_masks)) if f.endswith('.jpg')]\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Image</th>\n",
-       "      <th>Mask</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>img_gen_02474.jpg</td>\n",
-       "      <td>mask_gen_01684.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>img_gen_00112.jpg</td>\n",
-       "      <td>mask_gen_02339.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>img_gen_00590.jpg</td>\n",
-       "      <td>mask_gen_00535.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>img_gen_00978.jpg</td>\n",
-       "      <td>mask_gen_02429.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>img_gen_01798.jpg</td>\n",
-       "      <td>mask_gen_01642.jpg</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Image                Mask\n",
-       "0  img_gen_02474.jpg  mask_gen_01684.jpg\n",
-       "1  img_gen_00112.jpg  mask_gen_02339.jpg\n",
-       "2  img_gen_00590.jpg  mask_gen_00535.jpg\n",
-       "3  img_gen_00978.jpg  mask_gen_02429.jpg\n",
-       "4  img_gen_01798.jpg  mask_gen_01642.jpg"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# TODO: Sort "
    ]
   },
   {
